--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "proxy"
+name = "proxy-project"
 version = "0.1.0"
 edition = "2021"
 
+
 [dependencies]
-async-trait = "0.1.50"
+actix-web = "4.0"
 tokio = { version = "1", features = ["full"] }
-tokio-postgres = { version = "0.7", features = [] }
-pgwire = { path = "../pgwire" }
+tokio-postgres = { version = "0.7" }
+bcrypt = "0.12"
+dotenv = "0.15"
+rpassword = "5.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
